// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon render default 1`] = `
<span
  class="undefined Component-root-0-1-1"
>
  <i
    class="material-icons"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render in bright color 1`] = `
<span
  class="undefined Component-root-0-1-1 Component-color-bright-0-1-9"
>
  <i
    class="material-icons"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render in dark color 1`] = `
<span
  class="undefined Component-root-0-1-1 Component-color-dark-0-1-8"
>
  <i
    class="material-icons"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render in size l 1`] = `
<span
  class="undefined Component-root-0-1-1 Component-size-l-0-1-4"
>
  <i
    class="material-icons Component-size-i-l-0-1-7"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render in size m 1`] = `
<span
  class="undefined Component-root-0-1-1 Component-size-m-0-1-3"
>
  <i
    class="material-icons Component-size-i-m-0-1-6"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render in size s 1`] = `
<span
  class="undefined Component-root-0-1-1 Component-size-s-0-1-2"
>
  <i
    class="material-icons Component-size-i-s-0-1-5"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render with alignment center-in-content 1`] = `
<span
  class="undefined Component-root-0-1-1 Component-align-center-in-content-0-1-14"
>
  <i
    class="material-icons"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render with animation rotation-clockwise 1`] = `
<span
  class="undefined Component-root-0-1-1"
>
  <i
    class="material-icons Component-anim-rotation-clockwise-0-1-11"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render with animation rotation-counter-clockwise 1`] = `
<span
  class="undefined Component-root-0-1-1"
>
  <i
    class="material-icons Component-anim-rotation-counter-clockwise-0-1-13"
  >
    favorite
  </i>
</span>
`;

exports[`Icon render with className 1`] = `
<span
  class="test Component-root-0-1-1"
>
  <i
    class="material-icons"
  >
    favorite
  </i>
</span>
`;
